[NCL-9204] add flags to callbacks and implement SKIP_ROLLBACK
If remote entity specifies SKIP_ROLLBACK flags in their negative callback, the Task that was supposed to trigger/initiate rollback from a specified Milestone will instead transition to FAILED state.
