# core/src/main/java/org/jboss/pnc/rex/rest/CallbackEndpointImpl.java
@@ -23,6 +23,7 @@ import jakarta.annotation.security.RolesAllowed;
 import lombok.extern.slf4j.Slf4j;
 import org.jboss.pnc.rex.api.CallbackEndpoint;
 import org.jboss.pnc.rex.api.parameters.ErrorOption;
+import org.jboss.pnc.rex.common.enums.ResponseFlag;
 import org.jboss.pnc.rex.common.exceptions.TaskMissingException;
 import org.jboss.pnc.rex.dto.requests.FinishRequest;
 import org.jboss.pnc.rex.facade.api.TaskProvider;
@@ -31,6 +32,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 
 import java.time.Instant;
+import java.util.Set;
 
 @Slf4j
 @ApplicationScoped
@@ -62,9 +64,9 @@ public class CallbackEndpointImpl implements CallbackEndpoint {
 
     @Override
     @RolesAllowed({ "pnc-app-rex-editor", "pnc-app-rex-user", "pnc-users-admin" })
-    public void succeed(String taskName, Object result, ErrorOption errorOption) {
+    public void succeed(String taskName, Object result, ErrorOption errorOption, Set<ResponseFlag> flags) {
         try {
-            self.succeedInternal(taskName, result, false);
+            self.succeedInternal(taskName, result, false, flags);
         } catch (TaskMissingException e) {
             handleWithErrorOption(errorOption, e);
         } catch (ArcUndeclaredThrowableException e) {
@@ -74,9 +76,9 @@ public class CallbackEndpointImpl implements CallbackEndpoint {
 
     @Override
     @RolesAllowed({ "pnc-app-rex-editor", "pnc-app-rex-user", "pnc-users-admin" })
-    public void fail(String taskName, Object result, ErrorOption errorOption) {
+    public void fail(String taskName, Object result, ErrorOption errorOption, Set<ResponseFlag> flags) {
         try {
-            self.failInternal(taskName, result, false);
+            self.failInternal(taskName, result, false, flags);
         } catch (TaskMissingException e) {
             handleWithErrorOption(errorOption, e);
         } catch (ArcUndeclaredThrowableException e) {
@@ -85,25 +87,29 @@ public class CallbackEndpointImpl implements CallbackEndpoint {
     }
 
     @ApplyGuard("internal-retry")
-    void failInternal(String taskName, Object result, boolean rollback) {
-        taskProvider.acceptRemoteResponse(taskName, false, rollback, result);
+    void failInternal(String taskName, Object result, boolean rollback, Set<ResponseFlag> flags) {
+        taskProvider.negativeRemoteResponse(taskName, rollback, result, flags != null ? flags : Set.of());
     }
 
     @ApplyGuard("internal-retry")
-    void succeedInternal(String taskName, Object result, boolean rollback) {
-        taskProvider.acceptRemoteResponse(taskName, true, rollback, result);
+    void succeedInternal(String taskName, Object result, boolean rollback, Set<ResponseFlag> flags) {
+        taskProvider.positiveRemoteResponse(taskName, rollback, result, flags != null ? flags : Set.of());
     }
 
     @ApplyGuard("internal-retry")
     void finishInternal(String taskName, FinishRequest result) {
-        taskProvider.acceptRemoteResponse(taskName, result.getStatus(), false, result.getResponse());
+        if (result.getStatus()) {
+            taskProvider.positiveRemoteResponse(taskName, false, result.getResponse(), Set.of());
+        } else {
+            taskProvider.negativeRemoteResponse(taskName, false, result.getResponse(), Set.of());
+        }
     }
 
     @Override
     @RolesAllowed({ "pnc-app-rex-editor", "pnc-app-rex-user", "pnc-users-admin" })
     public void rollbackOK(String taskName, Object result, ErrorOption err) {
         try {
-            self.succeedInternal(taskName, result, true);
+            self.succeedInternal(taskName, result, true, Set.of());
         } catch (TaskMissingException e) {
             handleWithErrorOption(err, e);
         } catch (ArcUndeclaredThrowableException e) {
@@ -115,7 +121,7 @@ public class CallbackEndpointImpl implements CallbackEndpoint {
     @RolesAllowed({ "pnc-app-rex-editor", "pnc-app-rex-user", "pnc-users-admin" })
     public void rollbackNOK(String taskName, Object result, ErrorOption err) {
         try {
-            self.failInternal(taskName, result, true);
+            self.failInternal(taskName, result, true, Set.of());
         } catch (TaskMissingException e) {
             handleWithErrorOption(err, e);
         } catch (ArcUndeclaredThrowableException e) {
@@ -133,7 +139,7 @@ public class CallbackEndpointImpl implements CallbackEndpoint {
     @ApplyGuard("internal-retry")
     void systemFailure(String taskName, boolean rollback) {
         log.error("STOP {}: UNEXPECTED exception has been thrown.", taskName);
-        taskProvider.acceptRemoteResponse(taskName, false, rollback, "ACCEPT : System failure.");
+        taskProvider.negativeRemoteResponse(taskName, rollback, "ACCEPT : System failure.", Set.of());
     }
 
     void handleWithErrorOption(ErrorOption errorOption, RuntimeException e) {
