# core/src/main/resources/META-INF/openapi.json
@@ -43,6 +43,23 @@
             "default" : "PASS_ERROR",
             "type" : "string"
           }
+        }, {
+          "name" : "skipRollback",
+          "in" : "query",
+          "schema" : {
+            "default" : "false",
+            "type" : "boolean"
+          }
+        }, {
+          "name" : "flags",
+          "in" : "query",
+          "schema" : {
+            "uniqueItems" : true,
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/ResponseFlag"
+            }
+          }
         } ],
         "requestBody" : {
           "content" : {
@@ -157,6 +174,16 @@
           "schema" : {
             "default" : "PASS_ERROR",
             "type" : "string"
+          }
+        }, {
+          "name" : "flags",
+          "in" : "query",
+          "schema" : {
+            "uniqueItems" : true,
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/ResponseFlag"
+            }
           }
         } ],
         "requestBody" : {
@@ -1247,6 +1274,13 @@
           "rollbackCounter" : {
             "format" : "int32",
             "type" : "integer"
+          },
+          "flags" : {
+            "uniqueItems" : true,
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/ResponseFlag"
+            }
           }
         }
       },
@@ -1347,6 +1381,10 @@
         "format" : "date-time",
         "type" : "string",
         "example" : "2022-03-10T12:15:50-04:00"
+      },
+      "ResponseFlag" : {
+        "enum" : [ "SKIP_ROLLBACK" ],
+        "type" : "string"
       }
     },
     "securitySchemes" : {
